--- a/html/index.html
+++ b/html/index.html
@@ -6,13 +6,97 @@
 </head>
 <body>
 <div class="container" id="container">
-    {{template "header" .page}}
+{{template "header" .page}}
     <div class="row" id="content">
-		<h2>宏工具</h2>
-		<p>
-			欢迎使用宏制作及分享工具！
-			本工具旨在提供魔兽世界宏命令资料的分享及基础的教学。
-		</p>
+        <div class="col-md-12">
+            <h1>宏工具</h1>
+            <h4>
+                欢迎使用宏制作及分享工具！
+            </h4><br><br>
+            <p>
+                本工具旨在提供魔兽世界宏命令创建及收集、分享的平台，在这儿，你可以使用工具创建属于自己的宏命令；也可以将自己喜爱的宏分享到平台上，供所有的玩家使用；同时，还可以查看、修改其他可爱的玩家分享的宏，并且可以应用到自己的游戏中去！<br>
+                另外，本工具也提供魔兽世界宏命令资料的分享及基础的教学，你可以学到基础的知识，并应用到自己的游戏中。
+            </p>
+        </div>
+        <br><br>
+        <div class="col-md-12">
+            <div>
+                <h3>1. 宏是什么？</h3>
+                <p>
+                    在魔兽世界中，宏是一种通过一次按键完成多个动作的方法。<br>
+                    它可以将多个技能或者使用物品绑定到一个按钮上，通过按键或鼠标点击触发。这可以让你一次施放几个技能，避免一个技能一个技能的去点击，同时，通过绑定多个技能到一个按钮，也可以节省按钮栏位。<br>
+                    不过，需要注意的是，绑定的多个技能不能有公共冷却时间，否则，后续的技能是不能施放的。
+                </p>
+            </div>
+
+            <div>
+                <h3>2. 宏怎么写？</h3>
+                <p>
+                    一般宏命令以#showtooltip开头，这个命令可以让你的按钮显示技能的说明和技能的图标。<br>
+                    然后，在第二行开始加入你想要施放的技能，或者你想要使用的物品。<br>
+                    比如：
+                </p>
+                <div class="well well-lg">
+                    #showtooltip<br>
+                    /cast 意气风发
+                </div>
+                <p>
+                    如果你想要使用多个技能或者物品，可以添加多行来实现，比如：
+                </p>
+                <div class="well well-lg">
+                    #showtooltip<br>
+                    /cast 意气风发<br>
+                    /cast 部落军旗<br>
+                    /cast 灵魂石<br>
+                </div>
+                <p>
+                    但是，一定要注意，多个技能或者物品在组合时，不能把会触发公共冷却时间的技能放在中间，你可以将顺发技能或物品放在前面，最后一个放一个会触发公共冷却时间的技能（只能放一个，且放在最后，否则，该技能后面的所有技能都不会施放成功）。<br>
+                    比如：
+                </p>
+                <div class="well well-lg">
+                    #showtooltip<br>
+                    /cast 杀戮<br>
+                    /cast 意气风发<br>
+                    /cast 部落军旗<br>
+                    /cast 灵魂石<br>
+                </div>
+                <p>
+                    以上第一个技能：杀戮，会触发公共冷却时间，施放该技能后，动作条上的大部分技能都会有大概1秒左右的冷却时间，也就是图标在转圈，转圈结束前，其他技能点击都不会施放，图标转圈的这些技能就是有公共冷却时间的技能，这些技能就不能同时绑定在一起。比如上面的技能：意气风发，宏命令执行到这儿时，判定该技能处于公共冷却时间中，不能施放，那么整个宏就停止执行了。<br>
+                    其他那些图标没有转圈的技能（基本都是顺发技能和饰品）,是可以随意组合的。<br>
+                    我们修改一下以上组合，只保留一个有公共冷却时间的，其他的技能顺序可以随意组合，比如：
+                </p>
+                <div class="well well-lg">
+                    #showtooltip<br>
+                    /cast 部落军旗<br>
+                    /cast 灵魂石<br>
+                    /cast 意气风发<br>
+                </div>
+                <p>
+                    另外，多个有公共冷却时间的技能也可以使用/castsequence命令组合，命令字面意思就是，按顺序施放，也就是说多个技能每次点击只能施放一个，并且施放顺序是宏命令设定的顺序。<br>
+                    比如：
+                </p>
+                <div class="well well-lg">
+                    #showtooltip<br>
+                    /castsequence reset=20 狂野怒火,杀戮,倒刺射击,眼镜蛇射击
+                </div>
+                <p>
+                    以上技能，按顺序执行，第一次点击施放：狂野怒火，再次点击，就施放：杀戮，一直到执行完所有技能，才会重置顺序，跳转到第一个技能重新开始。<br>
+                    需要注意的是，如果某个技能处于冷却时间中，那么依次执行到该技能时，你点击宏命令，此时该技能是不能被执行的，所以/castsequence宏命令会一直卡在这个技能这儿，直到它冷却完成，可以被施放，才会调到下一个技能。<br>
+                    另外，reset=20的意思是，在你最后依次点击宏命令之后，20秒内都没有再次点击，那么/castsequence宏命令会自动重置到第一个技能处，重新开始顺序执行，每点击依次，执行几个技能。
+                </p>
+                <p>
+                    由于宏命令较多，此处只选取了其中两个做了简单的介绍，如果需要查看和使用更多的宏命令，请查看<a href="/Macro/macroByHand">手动组合</a><br>
+                    如果需要更深入的学习，那么可以去<a href="/Macro/macroInfo">宏资料</a>，那里有许多资料和工具能够帮助到你！
+                </p>
+            </div>
+            <div class="col-md-12">
+                <h3>3. 怎么使用宏？</h3>
+                <p>
+                    把你写好的宏复制一下，然后打开游戏，在聊天框输入/m，或者按ESC，点击”宏命令设置”，新建一个宏，粘贴进去之后，把新建的宏拖动到动作条上就可以使用了！
+                </p>
+            </div>
+        </div>
+        {{template "footer"}}
     </div>
 </div>
 </body>
