--- a/html/macroShare.html
+++ b/html/macroShare.html
@@ -47,6 +47,7 @@
                 <button type="button" class="btn btn-info col-sm-12" v-on:click="submitToService">分享一条宏</button>
             </form>
         </div>
+    {{template "footer"}}
     </div>
 </div>
 <br><br>
