--- a/html/macroCtSequence.html
+++ b/html/macroCtSequence.html
@@ -33,7 +33,7 @@
                 </tbody>
             </table>
         </div>
-
+    {{template "footer"}}
     </div>
 </div>
 <script src="../js/{{.page}}.js"></script>
