fix table color

--- a/html/macroCtSequence.html
+++ b/html/macroCtSequence.html
@@ -16,7 +16,7 @@
             <button class="btn btn-info" v-on:click="create">创建技能循环</button>
         </div>
         <div class="col-md-12">
-            <table class="table table-condensed" style="word-break:break-all; word-wrap:break-word;">
+            <table class="table table-condensed" style="word-break:break-all; word-wrap:break-word;color: #eee;">
                 <thead>
                 <tr>
                     <th class="col-md-1">#</th>
