--- a/html/index.html
+++ b/html/index.html
@@ -86,15 +86,51 @@
                 </p>
             </div>
         </div>
+       <div class="col-md-12">
+               <h3>3. 什么是命令条件语？</h3>
+               <p>
+               命令条件语是插入在宏命令中，使宏根据条件执行不同功能的语句。举个例子，下面这 个宏的作用是，如果是友方目标就施放回春术，如果是敌方目标就施放月火术。
+               </p>
+               <div class="well well-lg">
+                    #showtooltip<br>
+                    /cast [help]回春术;[harm]月火术
+                </div>
+               <p>
+                   当这个宏执行时，首先检查[help]条件，判断当前目标是否是一个可以接受治 疗/增益法术的目标。如果[help]条件成立，那么就施放"回春术"并执行下一条命令，否则(即没有目标，或目标不接受有益技能)继续执行下一个子句，也就是分号后[harm]那里，再判断[harm]条件。[harm]条件和[help]条件相反，判断目标是否接受敌对法术。同上，如果条件成立就释放“月火术”并执行下 一条命令。如果条件不成立，由于后面没有其他子句，这条宏命令就算执行完了，但是什么动作都没有做。<br>
+                   注：如果没有写[harm]条件，实际运行效果是差不多的。不过，如果你没有目标或者当前目标 不接受任何法术，那么屏幕上将会出现错误信息，或者对于某些技能，鼠标将会变成选择施放目标的状态。
+               </p>
+       </div>
         <div class="col-md-12">
-            <h3>3. 怎么使用宏？</h3>
+            <h3>4. 怎么使用宏？</h3>
             <p>
-                把你写好的宏复制一下，然后打开游戏，在聊天框输入/m，或者按ESC，点击”宏命令设置”，新建一个宏，粘贴进去之后，把新建的宏拖动到动作条上就可以使用了！
+                把你写好的宏复制一下，然后打开游戏，在聊天框输入/m，或者按ESC，点击”宏命令设置”，新建一个宏，粘贴进去之后，把新建的宏拖动到动作条上就可以使用了！<br>
+                首先，打开你的宏窗口：单击主菜单上的“宏”按钮，或者在聊天界面中输入/macro(/m)回车。在宏窗口的顶端，可以看见两个标签：“通用宏”和"你的角色名"的专用宏”。通用宏被存储在账号专有的文件夹中，被所有角色共享。而角色专用宏则存储在角色自己的文件夹下，是角色专用的。 在标签下面是18个存放宏的栏位。再往下是一个栏位，用于显示当前选中的宏；还有一个“修改名称/图标”的按钮，用于修改选中的宏。然后是一个用于显示、编辑当前宏的文本框。<br>
+                现在，把你写好的宏复制一下，新建一个宏，把文本粘贴进去之后，点击保存，然 后把新建的宏拖动到动作条上就可以使用了！
             </p>
             <p>
                 由于宏命令较多，此处只选取了其中两个做了简单的介绍，如果需要查看和使用更多的宏命令，请查看<a href="/Macro/macroByHand">手动组合</a><br>
                 如果需要更深入的学习，那么可以去<a href="/Macro/macroInfo">宏资料</a>，那里有许多资料和工具能够帮助到你！
             </p>
+            <p>
+               以下是当前客户端中常用的安全化命令的列表（如果需要查看和使用更多的宏命令，请查看<a href="/Macro/macroByHand">手动组合</a>）：<br>
+#showtooltip -- 显示技能图标及描述<br>
+/assisti -- 协助<br>
+/cancelaura -- 取消技能<br>
+/cast -- 施放技能<br>
+/castsequence -- 按顺序施放技能<br>
+/clearfocus -- 清除设置的焦点<br>
+/cleartarget -- 清除当前目标<br>
+/equip -- 装备物品<br>
+/focus -- 设置焦点<br>
+/startattack -- 开始攻击<br>
+/stopattack -- 停止攻击<br>
+/stopcasting -- 停止施放动作<br>
+/stopmacro -- 停止执行宏命令<br>
+/swapactionbar -- 切换动作条<br>
+/target -- 设置目标<br>
+/targetenemy -- 设置最近的敌人为目标<br>
+/use -- 使用物品<br>
+           </p>
         </div>
         {{template "footer"}}
     </div>
