--- a/html/macroCtSequence.html
+++ b/html/macroCtSequence.html
@@ -9,7 +9,7 @@
     {{template "header" .page}}
     <div class="row" id="content">
         <div class="col-md-12">
-            <label class="text-danger">Warning：正在测试中的功能，待完善中。。。</label>
+            <label class="text-danger">Warning：勿加入冷却时间超过45秒的技能，另外，需要注意的是此处的循环只是冷却时间的循环，没有考虑能量值的变化，故生成技能循环之后，可以根据具体的使用情况，增删掉其中的技能！</label>
         </div>
         <div class="col-md-12" id="btn_div" style="margin-top: 20px;">
             <button class="btn btn-info" v-on:click="addTemp">增加一个技能框</button>
